# eqMivtRefactor

./: CMakeLists.txt  README.md  example_octree_config.conf
cmake/: FindFreeImage.cmake
inc/: cache.h  cacheManager.h  channel.h  colorManager.h  config.h  configEvent.h  controlCache.h  controlCubeCPUCache.h  controlCubeCache.h  controlElementCache.h  controlPlaneCache.h  createOctree_cuda.h  cuda_help.h  eqMivt.h  error.h  frameData.h  hdf5File.h  initData.h  linkedList.h  localInitData.h  memoryCheck.h  mortonCodeUtil.h  mortonCodeUtil_CPU.h  node.h  octree.h  octreeConstructor.h  octreeContainer.h  octreeManager.h  octree_cuda.h  pipe.h  rayCaster_cuda.h  render.h  renderOGL.h  renderPNG.h  renderWorkers.h  resourcesManager.h  surfaceInfo.h  testVisibleCubes_CUDA.h  testVisibleCubes_cuda.h  textures.h  (+5 more)
src/: CMakeLists.txt  cache.cpp  cacheManager.cpp  channel.cpp  colorManager.cpp  config.cpp  controlCache.cpp  controlCubeCPUCache.cpp  controlCubeCache.cpp  controlPlaneCache.cpp  createOctree.cpp  createOctree_cuda.cu  cuda_help.cpp  deviceCode.cu  eqMivt.cpp  error.cpp  frameData.cpp  hdf5File.cpp  initData.cpp  linkedList.cpp  localInitData.cpp  main.cpp  memoryCheck.cpp  node.cpp  octree.cpp  octreeConstructor.cpp  octreeContainer.cpp  octreeManager.cpp  octree_cuda.cu  pipe.cpp  printOctree.cpp  rayCaster_cuda.cu  render.cpp  renderOGL.cpp  renderPNG.cpp  renderWorkers.cpp  resourcesManager.cpp  surfaceInfo.cpp  testCache.cpp  testControlCubeCPUCache.cpp  (+14 more)
